--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-15 16:31:04
+lastsearch = 2024-07-15 20:04:47
 
 [vinatools.com]
 match = -140.0%%
@@ -49,7 +49,7 @@ url = https://vnexpress.net/cowon-d2-gia-nhap-cau-lac-bo-16-gb-1500501.html
 [www.facebook.com]
 match = 0.0%%
 title = Black Kingdom - D2
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=hi_IN
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=az_AZ
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -177,9 +177,9 @@ title = Đi ăn ốc Singapore ở khu D2 Bình Thạnh với tui, rổ rá bìn
 url = https://www.tiktok.com/@hi.vidayyy/video/7308207874562395393
 
 [www.lazada.vn]
-match = -146.7%%
-title = [NGẪU NHIÊN] Dụng cụ nhảy dây có đếm số vòng D216
-url = https://www.lazada.vn/products/ngau-nhien-dung-cu-nhay-day-co-dem-so-vong-d216-rikob-shop-i2433883429.html
+match = -153.3%%
+title = Chiếu Lác May Giá Tốt T07/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/chieu-lac-may/
 
 [shopee.vn]
 match = -226.7%%
@@ -225,4 +225,14 @@ url = https://www.manulife.com.vn/content/dam/insurance/vn/documents/service-doc
 match = -213.3%%
 title = danh sách điểm tiêm vắc-xin phòng covid-19 ngày 22/3/2023
 url = https://hcdc.vn/hoidap/index/chitiet/b5f73d288ea96f141a64c180a6ed9be3
+
+[www.cordeck.com]
+match = -11.1%%
+title = BXUV.D216
+url = https://www.cordeck.com/wp-content/uploads/2021/12/2021-BXUV.D216-_-UL-Product-iQ.pdf
+
+[hunglien.net]
+match = 33.3%%
+title = Chiếu lạc - Hưng Liên
+url = http://hunglien.net/san-pham/chieu-lac/
 
