--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-07-15 15:47:01
+lastsearch = 2024-07-15 20:06:26
 
 [www.cms.gov]
 match = 4.5%%
@@ -457,9 +457,9 @@ title = CPE-Pending-QP-list-6-17-2024
 url = https://www.dhcs.ca.gov/services/medi-cal/eligibility/Documents/CPE-Pending-QP-list-6-17-2024.xlsx
 
 [ntrs.nasa.gov]
-match = -36.4%%
-title = Properties of Selected Radioisotopes
-url = https://ntrs.nasa.gov/api/citations/19680020487/downloads/19680020487.pdf
+match = -46.7%%
+title = 20010061385.pdf
+url = https://ntrs.nasa.gov/api/citations/20010061385/downloads/20010061385.pdf
 
 [www.caremark.com]
 match = -18.2%%
