--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-07-15 18:26:43
+lastsearch = 2024-07-15 20:07:05
 
 [thamaulac.com.vn]
 match = -22.2%%
@@ -27,9 +27,9 @@ title = Thảm Trải Sàn TPHCM - THẢM XỐP MÀU 60X60X1.2CM
 url = http://trieuchau.com/en-us/1057/27906/Tham-xop-60x60cm/THAM-XOP-MAU-60X60X12CM
 
 [shopee.vn]
-match = -111.1%%
-title = thảm ghép 60x60cm giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
+match = -100.0%%
+title = Thảm Xốp Vân Gỗ Trung Quốc 60x60 (1 Cốp 4 miếng)
+url = https://shopee.vn/Thảm-Xốp-Vân-Gỗ-Trung-Quốc-60x60-(1-Cốp-4-miếng)-Thảm-Xốp-Siêu-Đẹp-i.317906647.7455933918
 
 [vatlieulotsan.com]
 match = -27.8%%
@@ -42,14 +42,14 @@ title = Thảm Tường Lâm
 url = https://thamtuonglam.vn/
 
 [thamachau.vn]
-match = 22.2%%
-title = Thảm xốp một màu 60*60*4 tấm
-url = http://thamachau.vn/san-pham/469/tham-xop-mot-mau-60-60-4-tam.html
+match = -55.6%%
+title = Thảm xốp mặt nỉ hoa văn Âu Lạc 60*60*10 tấm
+url = http://thamachau.vn/tham-xop-mat-ni-hoa-van-au-lac-60-60-10-tam521
 
 [thamsami.com]
-match = -94.4%%
-title = Thảm xốp trải lót sàn mặt nỉ hoa văn 60x60 giá rẻ
-url = http://thamsami.com/san-pham/314/tham-xop-mat-ni-hoa-van-au-lac-60-60-10-tam.html
+match = -55.6%%
+title = Thảm xốp mặt nỉ hoa văn Âu Lạc 60*60*10 tấm
+url = http://thamsami.com/tham-xop-mat-ni-hoa-van-au-lac-60-60-10-tam
 
 [thamht.vn]
 match = 27.8%%
@@ -57,9 +57,9 @@ title = Thảm xốp trơn đơn màu 60x60
 url = https://thamht.vn/products/tham-lot-tre-nam-choi
 
 [tiki.vn]
-match = -111.1%%
-title = Thảm xốp lót sàn 60x60 hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=thảm xốp lót sàn 60x60
+match = -127.8%%
+title = Mua 10 tấm xốp ghép, mặt thảm nỉ kích thước 60cm x ...
+url = https://tiki.vn/10-tam-xop-ghep-mat-tham-ni-kich-thuoc-60cm-x-60cm-x-0-6cm-tam-mau-xam-p74677292.html?spid=74677292
 
 [thamtretho.com]
 match = -66.7%%
@@ -70,4 +70,9 @@ url = https://thamtretho.com/tham-co
 match = -83.3%%
 title = Thảm xốp một màu 60*60cm giá rẻ tại Hồ Chí Minh
 url = https://www.pinterest.com/pin/763993524284509627/
+
+[www.facebook.com]
+match = -11.1%%
+title = Thảm Xốp Ghép Trải Sàn | Hanoi
+url = https://www.facebook.com/xoptraisan/
 
