--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-15 15:52:34
+lastsearch = 2024-07-15 20:50:24
 
 [chanrathanhthuy.com]
 match = -6.5%%
@@ -22,9 +22,9 @@ title = Bộ sản phẩm SH_BT22 056
 url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bt22-056
 
 [changagoidemsonghong.com]
-match = -29.0%%
-title = Chăn ga gối Sông Hồng dòng Home mã S17-05 - Chất Tencel ...
-url = https://changagoidemsonghong.com/chan-ga-goi-home-s17-05
+match = 38.7%%
+title = Bộ chăn ga gối Walt Disney mã mầu YC22012
+url = https://changagoidemsonghong.com/chan-ga-goi-yc22012
 
 [foreverbedding.net]
 match = -3.2%%
