--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-07-15 11:51:48
+lastsearch = 2024-07-15 20:53:03
 
 [www.bible.com]
-match = -128.6%%
-title = MARKA 16 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/MRK.16.MIZCLBSI
+match = -135.7%%
+title = JOHANA 16 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/JHN.16.MIZCLBSI
 
 [tiki.vn]
 match = -171.4%%
@@ -22,9 +22,9 @@ title = Màn chụp tự bung 2016 - F2 - xanh viền xanh
 url = https://mungmocmien.com/products/man-chup-tu-bung-2016-code-f2-9
 
 [munghoangphat.com]
-match = -207.1%%
-title = Mùng chụp tự bung đỉnh rộng HOÀNG PHÁT - XANH TRƠN ...
-url = https://munghoangphat.com/mung-chup-tu-bung-dinh-rong-hoang-phat-xanh-tron-loai-tot-.html
+match = -150.0%%
+title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
+url = https://munghoangphat.com/
 
 [manthutrang.com]
 match = -207.1%%
@@ -52,9 +52,9 @@ title = Màn chụp tự bung người lớn chống muỗi giá rẻ chính hã
 url = https://boba.vn/man-chup-tu-bung-nguoi-lon
 
 [shopee.vn]
-match = -128.6%%
-title = màn chụp giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=màn chụp
+match = -185.7%%
+title = Màn Khung Không Khoan Tường GIA LONG Khung Inox ...
+url = https://shopee.vn/Màn-Khung-Không-Khoan-Tường-GIA-LONG-Khung-Inox-304-Phi-16-Màu-Xanh-Hồng-KT-1m4-1m6-1m8-2m-i.1120412717.24251331954
 
 [text.egwwritings.org]
 match = -78.6%%
@@ -72,9 +72,9 @@ title = Doktrin na ol Kavanen 22
 url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/22?lang=tpi
 
 [www.youtube.com]
-match = -114.3%%
-title = Thangkura bung 16-na (Mizo fiamthu video)
-url = https://www.youtube.com/watch?v=vqlF1VcFeuk
+match = 28.6%%
+title = THUPUAN Bung 16 na
+url = https://www.youtube.com/watch?v=TJbt7AYMnGI
 
 [www.instagram.com]
 match = -250.0%%
@@ -88,8 +88,8 @@ url = https://en.wikipedia.org/wiki/Anggun
 
 [mail.storyfb.com]
 match = 35.7%%
-title = TAWNMANG RAM bung-16
-url = https://mail.storyfb.com/viewtopic.php?t=29346
+title = TAWNMANG RAM Bung-16
+url = https://mail.storyfb.com/viewtopic.php?t=29349
 
 [www.lazada.vn]
 match = -207.1%%
