--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-15 20:26:21
+lastsearch = 2024-07-15 22:18:46
 
 [demxanh.com]
 match = -41.2%%
@@ -12,14 +12,14 @@ title = Thảm trải sàn Bali siêu khuyến mại
 url = https://demxanh.com/tham-trai-san-bali.html
 
 [tiki.vn]
-match = -129.4%%
-title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mới
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-moi-p41436661.html?spid=41436690
+match = -105.9%%
+title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p44108490.html?spid=160905191/
 
 [www.lazada.vn]
-match = -152.9%%
-title = Thảm Trải Sàn 100%% Nhập Khẩu Cao Cấp, Sang Trọng ...
-url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html
+match = -135.3%%
+title = Thảm Lì Bali Nhập Khẩu Cao Cấp, Sang Trọng 120x160 ...
+url = https://www.lazada.vn/products/tham-trai-san-tham-li-bali-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-cho-phong-khach-phong-ngu-chup-hinhvv-i1557383752.html
 
 [thegioidemviet.vn]
 match = -135.3%%
@@ -27,9 +27,9 @@ title = Thảm trải sàn Bali M2 hàng cao cấp, mẫu mã đa dạng
 url = https://thegioidemviet.vn/tham-trai-san-bali-m2/
 
 [sammas.vn]
-match = -105.9%%
-title = Thảm lì ép Hàn Quốc (M9 hoa xanh) - STHA0002
-url = https://sammas.vn/copy-of-tham-li-ep-han-quoc-stha0001
+match = -111.8%%
+title = Thảm lì ép Hàn Quốc (M2 hoa vàng) - STHA0011
+url = https://sammas.vn/tham-li-ep-han-quoc-stha0011
 
 [shopee.vn]
 match = -135.3%%
