--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-15 22:38:33
+lastsearch = 2024-07-15 23:18:07
 
 [tiki.vn]
 match = -47.6%%
@@ -22,9 +22,9 @@ title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
 url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.tiktok.com]
-match = -19.0%%
-title = Cách Xem Lịch Chiếu Film Tại Taiwan
-url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
+match = -85.7%%
+title = Phim Việt Nam Chiếu Rạp Ở Taiwan Chiếu Ngày Bao Nhiêu
+url = https://www.tiktok.com/discover/phim-việt-nam-chiếu-rạp-ở-taiwan-chiếu-ngày-bao-nhiêu?lang=en
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
