--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-15 21:19:31
+lastsearch = 2024-07-15 23:14:45
 
 [erado.vn]
 match = 0.0%%
@@ -12,9 +12,9 @@ title = Giường ngủ da hạng sang mã 18
 url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html
 
 [shopee.vn]
-match = -70.0%%
-title = thảm trải giường giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm trải giường
+match = -90.0%%
+title = Drap Ga giường lẻ thun lạnh HQ [ NỆM CAO] từ 18-40cm
+url = https://shopee.vn/Drap-Ga-giường-lẻ-thun-lạnh-HQ-NỆM-CAO-từ-18-40cm-i.177151023.16451387593
 
 [h5.lazada.vn]
 match = -5.0%%
