--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-15 15:48:48
+lastsearch = 2024-07-15 23:22:42
 
 [www.diepxuan.com]
-match = 50.0%%
-title = Điệp Xuân Thảm giường nỉ 140x190
-url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
+match = 27.3%%
+title = Thảm giường nỉ 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [tiki.vn]
 match = -36.4%%
@@ -22,13 +22,13 @@ title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
 
 [flexhouse.vn]
-match = -104.5%%
-title = Thảm tròn trải chân giường trong phòng ngủ phòng khách ...
+match = -50.0%%
+title = Thảm tròn trải chân giường trong phòng ngủ ...
 url = https://flexhouse.vn/tham-tron-trai-chan-giuong-trong-phong-ngu-phong-khach-tbd6002
 
 [ochino.com]
-match = -63.6%%
-title = (FREESHIP) Thảm chân giường, thảm bếp dài 1m6-50 ...
+match = -45.5%%
+title = (FREESHIP) Thảm chân giường, thảm bếp dài ...
 url = https://ochino.com/freeship-tham-chan-giuong-tham-bep-dai-1m6-50-chat-day-dep-hang-co-san/
 
 [decoviet.vn]
