--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-07-15 19:28:52
+lastsearch = 2024-07-15 23:18:21
 
 [www.lazada.vn]
 match = -268.8%%
@@ -22,9 +22,9 @@ title = [ F4 THAILAND ] Warm Dream - EP.6 - NovelToon
 url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.tiktok.com]
-match = -75.0%%
-title = As Warm As Fire Final Episode Ending
-url = https://www.tiktok.com/discover/as-warm-as-fire-final-episode-ending
+match = -181.2%%
+title = Gorgeous @ARLINDA🤍 #beautytok #liptutorial #hudabeauty
+url = https://www.tiktok.com/@hudabeauty/video/7370757654081244459
 
 [eastcoastbeddingusa.com]
 match = -125.0%%
@@ -119,7 +119,7 @@ url = https://www.dailymail.co.uk/tvshowbiz/article-7671041/Rob-Kardashian-treat
 [www.facebook.com]
 match = -25.0%%
 title = Chăn ga gối đệm Điệp Xuân
-url = https://www.facebook.com/diepxuanco/
+url = https://www.facebook.com/diepxuanco/?locale=nb_NO
 
 [extenzee.com]
 match = -262.5%%
