--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-15 22:45:06
+lastsearch = 2024-07-15 23:35:07
 
 [everon.online]
 match = -7.4%%
@@ -37,9 +37,9 @@ title = Bộ chăn ga Everon ESB -22020
 url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
 
 [everon.net.vn]
-match = 10.5%%
-title = Bộ Everon Epm-21070
-url = https://everon.net.vn/everon/2131/bo-everon-epm-21070
+match = -18.5%%
+title = Bộ Everon Epm-21069 - Chăn ga gối đệm Everon
+url = https://everon.net.vn/everon/2132/bo-everon-epm-21069
 
 [sieuthidemhanquoc.com.vn]
 match = 18.5%%
