--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-15 20:36:00
+lastsearch = 2024-07-15 23:42:34
 
 [www.youtube.com]
-match = -121.1%%
-title = Cây hoa mộc hương sau 2 tháng tạo tán cây đã rất đẹp
-url = https://www.youtube.com/watch?v=Z5dWoPtuKqA
+match = -142.1%%
+title = Cách nhân giống mộc hương bằng cành dễ nhất cho người ...
+url = https://www.youtube.com/watch?v=0Ww7ZbVfyBY
 
 [trangtrisanvuon.vn]
 match = -147.4%%
@@ -227,9 +227,9 @@ title = Khuyến cáo thu nhặt, xử lý quả cây ngô đồng trong trườ
 url = https://baolamdong.vn/toa-soan-ban-doc/202303/khuyen-cao-thu-nhat-xu-ly-qua-cay-ngo-dong-trong-truong-hoc-4861fbb/
 
 [shopee.vn]
-match = -68.4%%
-title = bàn ghế học sinh chính hãng xuân hòa 14 07cs
-url = https://shopee.vn/product/390741885/24431682129?gsht=StznoKFCWptXK5Vt
+match = -94.7%%
+title = Chiếu trúc Mộc lá cao cấp chất lượng cao đủ kích cỡ
+url = https://shopee.vn/Chiếu-trúc-Mộc-lá-cao-cấp-chất-lượng-cao-đủ-kích-cỡ-i.296736591.8061367106
 
 [m.facebook.com]
 match = -110.5%%
@@ -260,4 +260,14 @@ url = https://www.nano-reef.com/forums/topic/199385-curious-white-film-on-rock/
 match = -78.9%%
 title = Monday Night Watercolor DAMP ON WET 1/14/14
 url = https://www.pinterest.com/pin/553872454172146108/
+
+[khodem.vn]
+match = -152.6%%
+title = Chiếu tre trúc tăm mộc Hương Trúc - Chiếu đẹp giá rẻ nhất Hà ...
+url = https://khodem.vn/chieu-tre-truc-tam-moc-huong-truc/
+
+[thegioichieutruc.com]
+match = -15.8%%
+title = Chiếu trúc thanh viền lụa loại cây
+url = https://thegioichieutruc.com/chieu-truc-thanh-vien-lua-loai-cay/
 
