--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-07-15 20:07:05
+lastsearch = 2024-07-15 23:36:46
 
 [thamaulac.com.vn]
 match = -22.2%%
@@ -27,9 +27,9 @@ title = Thảm Trải Sàn TPHCM - THẢM XỐP MÀU 60X60X1.2CM
 url = http://trieuchau.com/en-us/1057/27906/Tham-xop-60x60cm/THAM-XOP-MAU-60X60X12CM
 
 [shopee.vn]
-match = -100.0%%
-title = Thảm Xốp Vân Gỗ Trung Quốc 60x60 (1 Cốp 4 miếng)
-url = https://shopee.vn/Thảm-Xốp-Vân-Gỗ-Trung-Quốc-60x60-(1-Cốp-4-miếng)-Thảm-Xốp-Siêu-Đẹp-i.317906647.7455933918
+match = -111.1%%
+title = thảm ghép 60x60cm giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
 
 [vatlieulotsan.com]
 match = -27.8%%
